added html for first section

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blackpink fanpage</title>
+</head>
+<body>
+    <header>
+        <img  src="./images/Logo_of_Blackpink.svg.png" alt="logo of blackpink">
+    <ul>
+        <li><a href="">Link 1</a></li>
+        <li><a href="">Link 2</a></li>
+        <li><a href="">Link 3</a></li>
+    </ul>
+    </header>
 
+    <div class="containerHead">
+        <div class="texthead">This website is awesome</div>
+        <div class="textheadsmall">this website has some subtexct blah vlah</div>
+    </div>
+</body>
+</html>
