--- a/index.html
+++ b/index.html
@@ -4,21 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackpink fanpage</title>
+    <title>BLACKPINK Fanpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img  src="./images/Logo_of_Blackpink.svg.png" alt="logo of blackpink">
-    <ul>
-        <li><a href="">Link 1</a></li>
-        <li><a href="">Link 2</a></li>
-        <li><a href="">Link 3</a></li>
+        <img class="imagelogo" src="./images/Logo_of_Blackpink.svg.png" alt="logo of blackpink" >
+    <ul class="headlink">
+        <li><a href="https://www.instagram.com/blackpinkofficial/" target="_blank">Instagram</a></li>
+        <li><a href="https://www.youtube.com/@BLACKPINK" target="_blank">YouTube</a></li>
+        <li><a href="https://www.blackpinkmusic.com/" target="_blank">Offical site</a></li>
     </ul>
-    </header>
-
+</header>
     <div class="containerHead">
-        <div class="texthead">This website is awesome</div>
-        <div class="textheadsmall">this website has some subtexct blah vlah</div>
+     <div class="textcon">
+        <div class="texthead">This website is about BLACKPINK</div>
+        <div class="textheadsmall">...which is a South Korean girl group formed by YG Entertainment, consisting of members Jisoo, Lisa, Jennie,and Rosé .</div>
+        <div class="smallertext">Click the button below to see their dance practice playlist for which they are most famous for!</div>
+        <a href="https://www.youtube.com/playlist?list=PLNF8K9Ddz0kI4uLrV7BYrdcebUuMf06z1" target="_blank" class="button">Click me!</a>
+
+     </div>
+        <img class="group" src="./images/group.jpeg" alt="group photo of members">
     </div>
+
+    
+<div class="title">MEMBERS!</div>
+
+<div class="container">
+  <div class="info">
+    <a href="https://en.wikipedia.org/wiki/Jennie_(singer)" target="_blank">
+    <img src="./images/jennie.jpeg" alt="jennie" class="glow-border"></a>
+    <div class="text">Main Rapper, Lead Vocalist, Face of the Group.</div>
+  </div>
+  <div class="info">
+    <a href="https://en.wikipedia.org/wiki/Jisoo" target="_blank">
+    <img src="./images/jisoo.jpeg" alt="jisoo" class="glow-border"></a>
+    <div class="text">Lead Vocalist, Visual.</div>
+  </div>
+  <div class="info">
+    <a href="https://en.wikipedia.org/wiki/Lisa_(rapper)" target="_blank">
+    <img src="./images/lisa.jpeg" alt="lisa" class="glow-border"></a>
+    <div class="text">Main Dancer, Lead Rapper, Sub-Vocalist, Maknae.</div>
+  </div>
+  <div class="info">
+    <a href="https://en.wikipedia.org/wiki/Ros%C3%A9_(singer)" target="_blank">
+    <img src="./images/rosee.jpeg" alt="rose" class="glow-border"></a>
+    <div class="text">Main Vocalist, Lead Dancer.</div>
+  </div>
+</div>
+
+
+    
 </body>
 </html>
