--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
     
 <div class="title">MEMBERS!</div>
+<div class="titleSmall">Click a photo to see her bio! </div>
+
 
 <div class="container">
   <div class="info">
@@ -54,6 +56,26 @@
 </div>
 
 
-    
+<div class="tcon">
+  <div class="title">Famous Quotes of Members!</div>
+
+    <p class="quote"><cite>"No doctor could help when I'm lovesick."</cite> — Jennie</p>
+    <p class="quote"><cite>"In the end, whose fault was it? There is no such thing as love. In the end, is breaking up, losing?"</cite> — Rosé</p>
+    <p class="quote"><cite>"Been a bad girl, I know I am. And I'm so hot, I need a fan. I don't want a boy, I need a man."</cite> — Lisa</p>
+    <p class="quote"><cite>"Life is not easy, there are so many crossroads... that’s our life."</cite> — Jisoo</p>
+  </div>
+    <div class="containbox">
+  <div class="box">
+   
+    <div class="containerr">
+      <div class="headerr">Show your support for BLACKPINK </div>
+      <div class="textt">Get your OFFICAL merch and accessories here!</div>
+      <a href="https://shop.blackpinkmusic.com/collections/merch" target="_blank" class="button">MERCH</a>
+      <a href="https://shop.blackpinkmusic.com/collections/accessories" target="_blank" class="button">ACCEESSORIES</a>
+    </div>
+</div>
+
+    </div>
+  </div>
 </body>
 </html>
