--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </header>
     <div class="containerHead">
      <div class="textcon">
-        <div class="texthead">This website is about BLACKPINK</div>
+        <div class="texthead"><u>This website is about BLACKPINK</u></div>
         <div class="textheadsmall">...which is a South Korean girl group formed by YG Entertainment, consisting of members Jisoo, Lisa, Jennie,and Rosé .</div>
         <div class="smallertext">Click the button below to see their dance practice playlist for which they are most famous for!</div>
         <a href="https://www.youtube.com/playlist?list=PLNF8K9Ddz0kI4uLrV7BYrdcebUuMf06z1" target="_blank" class="button">Click me!</a>
@@ -28,8 +28,8 @@
     </div>
 
     
-<div class="title">MEMBERS!</div>
-<div class="titleSmall">Click a photo to see her bio! </div>
+<div class="title"><u>MEMBERS!</u></div>
+<div class="titleSmall">(Click a photo to see her bio!) </div>
 
 
 <div class="container">
@@ -57,7 +57,7 @@
 
 
 <div class="tcon">
-  <div class="title">Famous Quotes of Members!</div>
+  <div class="title"><u>Famous Quotes of Members!</u></div>
 
     <p class="quote"><cite>"No doctor could help when I'm lovesick."</cite> — Jennie</p>
     <p class="quote"><cite>"In the end, whose fault was it? There is no such thing as love. In the end, is breaking up, losing?"</cite> — Rosé</p>
